2003-03-15  Bradley Bell  <bradleyb@smeagol>

	* arch/ogl/gr.c: fixed dark font bug by calling gr_set_mode from
	gr_init.  don't really know why this works, though

2003-03-14  Bradley Bell  <bradleyb@smeagol>

	* main/gameseq.c: fix Bitmap_replacement_data mem leakage

	* unused/bios/rbaudio.h: removed duplicate file

2003-03-14  Christopher Thielen  <chris@luethy.net>

	* arch/sdl/rbaudio.c (RBAExit): stop cd audio when exiting

2003-03-14  Micah J. Lieske  <MicahJon@compuserve.com>

	* main/gamecntl.c: add comments to the "only matt knows" cheats

2003-03-14  Martin Schaffner <maschaffner@gmx.ch>

	* main/gamemine.c: formatting, better texture conversion for d1
	levels

2003-03-14  Bradley Bell  <btb@icculus.org>

	* main/piggy.c: must swap all mac version pigfiles

	* main/ai.c, main/ai.h, main/bm.h, main/crypt.c, main/joydefs.h,
	main/multi.c: formatting, minor cleanups

	* 2d/rle.c (rle_swap_0_255): need to swap line_size on bigendian
	machines

	* main/mission.c, main/mission.h: detect mac full version hogfile

2003-03-13  Bradley Bell  <btb@icculus.org>

	* arch/sdl/joydefs.c, main/kconfig.c, main/kconfig.h, main/menu.c:
	added joy/mouse sensitivity slider, increased range to 16, and
	added d2x keys menu

	* main/Makefile.am, main/joydefs.c, main/old/joydefs.c: moved old
	joydefs to main

	* arch/linux/Makefile.am: removed extra backslash

	* TODO, installation.txt: updated some documentation

	* main/gamecntl.c, main/menu.c, main/menu.h: added "d2x options"
	menu, with maxfps option

2003-03-12  Bradley Bell  <btb@icculus.org>

	* main/game.c, main/game.h, main/inferno.c: added -maxfps option

	* arch/linux/alsadigi.c, arch/linux/findfile.c,
	arch/linux/hmiplay.c, arch/linux/init.c, arch/linux/ipx_bsd.c,
	arch/linux/ipx_kali.c, arch/linux/ipx_lin.c, arch/linux/ipx_udp.c,
	arch/linux/joydefs.c, arch/linux/ukali.c, arch/linux/include,
	arch/linux/include/ipx_bsd.h, arch/linux/include/ipx_drv.h,
	arch/linux/include/ipx_hlpr.h, arch/linux/include/ipx_kali.h,